--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^3.4.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-sass": "^4.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.32.12"
   },
   "devDependencies": {
     "prettier": "2.2.1"
