--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "dependencies": {
     "gatsby": "^3.4.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^1.4.1",
     "gatsby-plugin-sass": "^4.4.0",
+    "gatsby-plugin-sharp": "^3.4.2",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.32.12"
