--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^3.4.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.4.1",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sass": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.2",
     "gatsby-source-filesystem": "^3.4.0",
