--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^3.4.1",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.4.1",
     "gatsby-plugin-react-svg": "^3.0.1",
@@ -23,6 +24,7 @@
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.2.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "gbimage-bridge": "^0.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.32.12"
