--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,4 +28,9 @@ jobs:
 
       - name: Verify build
         run: ls -la public
+
+      - name: Deploy
+        with:
+          branch: deploy
+          folder: build
         
