--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,9 @@ jobs:
         run: ls -la public
 
       - name: Deploy
+        run: |
+          git commit -am "Build"
+          git push
         with:
           branch: deploy
           folder: build
