--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sass": "^4.5.0",
     "gatsby-plugin-sharp": "^3.5.0",
@@ -27,6 +28,7 @@
     "gbimage-bridge": "^0.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "sass": "^1.32.13"
   },
   "devDependencies": {
